fix layout issues

--- a/assets/scss/common/general.scss
+++ b/assets/scss/common/general.scss
@@ -53,3 +53,7 @@
     font-weight: bold;
     font-style: normal;
 }
+
+* {
+    width: 100%;
+}
