--- a/assets/scss/pages/homepage.scss
+++ b/assets/scss/pages/homepage.scss
@@ -9,7 +9,7 @@
 
    h2 {
       font-size: 2.8rem;
-      padding: 20vh 0;
+      padding: 25vh 0;
       line-height: 1.25;
       letter-spacing: -.025em;
 
@@ -19,8 +19,8 @@
       justify-content: space-between;
       .item {
          border-bottom: 1px solid whitesmoke;
-         height: 40%;
-         margin: 0 5px;
+         // height: 40%;
+         // margin: 0 5px;
          width: 40%  ;
       }
       h3 {
